# MTApi

./: CMakeLists.txt  README.md
CTPApi/: CMakeLists.txt
CTPApi/CTPApi/: CTPApi.cpp  CTPApi.h  CTPSessionApi.h
CTPApi/CTPSrc/: CMakeLists.txt  CTPApi.cpp  CTPApi.hpp  CTPMarket.cpp  CTPMarket.h  CTPMarketApi.cpp  CTPMarketApi.h  CTPSrc.cpp  CTPSrc.hpp  CTPTrade.h  CTPTraderApi.cpp  CTPTraderApi.h
CTPApi/include/: CTP.h  CTPCommon.h  CTPExport.h  CTPExport.h.in
CTPApi/src/: CTP.cpp  CTPCommon.cpp
MDSrc/: CMakeLists.txt  MDHandler.hpp  MDSrc.cpp  MDSrc.hpp
MDSrv/: CMakeLists.txt  MDHandler.hpp  MDSrv.cpp  MDSrv.hpp
MTApi/: CMakeLists.txt  MDApi.cpp  MDApi.h  MTApi.cpp  MTApi.h  TDApi.cpp  TDApi.h
MTApp/: App.cpp  CMakeLists.txt
MTSrv/: CMakeLists.txt  MTHandler.hpp  MTSrv.cpp  MTSrv.hpp
TDSrv/: CMakeLists.txt  TDHandler.hpp  TDSrv.cpp  TDSrv.hpp
XUtil/: CMakeLists.txt
conf/: Code.json  MDSrc.json  MDSrv.json  MTClt.json  MTSrv.json  TDSrv.json  pyMTApi.json
include/: Common.hpp  CommonEx.hpp  DataDef.h  DataDefEx.h  DataSet.hpp  DataSetConv.hpp  DataSetConvEx.hpp  FieldDef.h  IDataSet.h  IIndicatorApi.h  IIndicatorSet.h  IMDApi.h  IMDDataSet.h  IMDSet.h  IMTApi.h  ITDApi.h  ITDDataSet.h  ITDSet.h  IndicatorSet.hpp  IpcBase.hpp  IpcClient.hpp  IpcServer.hpp  MDBase.hpp  MDDataSet.hpp  MDDataSetMgr.hpp  MDSrcBase.hpp  MDSrcRpcHandler.hpp  MTApiMgr.hpp  Order.hpp  Period.hpp  RpcBase.hpp  RpcBaser.hpp  RpcClient.hpp  RpcClientImpl.hpp  RpcDef.hpp  RpcServer.hpp  RpcServerImpl.hpp  SelfIndex.hpp  SelfIndexMgr.hpp  TDBase.hpp  (+4 more)
pyMTApi/: CMakeLists.txt  pyMTApi.cpp  pyMTApi.hpp  pyMTApi.py  pyMTCommon.hpp
