#CTPApi/CMakeLists.txt
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(CTPApi)

MESSAGE(STATUS "${CMAKE_SYSTEM_NAME} ${CMAKE_CL_64}")

#可以在命令行设置选项 -DCTP_PREFIX="x86_sopt"
IF(CTP_PREFIX)
	MESSAGE(STATUS "CTP_PREFIX: ${CTP_PREFIX}")
ELSE()
	IF(WIN32)
		IF(CMAKE_CL_64)
			SET(CTP_PREFIX "x64_sopt")
		ELSE()
			SET(CTP_PREFIX "x86_sopt")
		ENDIF()
	ELSE()
		SET(CTP_PREFIX "x64_sopt_linux")
	ENDIF()
	SET(CTP_LIBRARY_DIRS "./lib/${CTP_PREFIX}")
	MESSAGE(STATUS "CTP_LIBRARY_DIRS: ${CTP_LIBRARY_DIRS}")
ENDIF()

ADD_DEFINITIONS(-DCTPApi_EXPORTS)

#版本号，注意0会导致CONFIGURE_FILE替换@VAR@失败
SET(CTPAPI_VERSION_MAJOR 1)
SET(CTPAPI_VERSION_MINOR 1)
SET(CTPAPI_VERSION_BUILD 1)
SET(CTPAPI_VERSION "${CTPAPI_VERSION_MAJOR}.${CTPAPI_VERSION_MINOR}.${CTPAPI_VERSION_BUILD}")

CONFIGURE_FILE(./include/CTPExport.h.in ${PROJECT_SOURCE_DIR}/include/CTPExport.h @ONLY)

#ADD_SUBDIRECTORY(CTPApi)
ADD_SUBDIRECTORY(CTPSrc)

